--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "text": ""
+    "dev": "nodemon --exec node server.js"
   },
   "repository": {
     "type": "git",
@@ -14,5 +14,12 @@
   "bugs": {
     "url": "https://github.com/leeesangheee/andand-backend/issues"
   },
-  "homepage": "https://github.com/leeesangheee/andand-backend#readme"
+  "homepage": "https://github.com/leeesangheee/andand-backend#readme",
+  "dependencies": {
+    "apollo-server": "^2.22.2",
+    "graphql": "^15.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
