--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "nodemon --exec babel-node server",
+    "dev": "nodemon --exec ts-node src/server --ext ts,js",
     "migrate": "npx prisma migrate dev",
     "studio": "npx prisma studio"
   },
@@ -31,6 +31,8 @@
     "@babel/node": "^7.13.13",
     "@babel/preset-env": "^7.13.12",
     "nodemon": "^2.0.7",
-    "prisma": "^2.20.1"
+    "prisma": "^2.20.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
