--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/leeesangheee/andand-backend#readme",
   "dependencies": {
     "@prisma/client": "^2.20.1",
-    "apollo-server": "^2.22.2",
+    "apollo-server-express": "^2.22.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
