S3 Photo Upload(aws-sdk, login to aws)

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^2.20.1",
     "apollo-server-express": "^2.22.2",
+    "aws-sdk": "^2.885.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
